<resources>
    <string name="app_name" translatable="false">Camera Project</string>
    <string name="str_photo_detail_name_label">Name</string>
    <string name="str_photo_detail_left_photo_label">Left</string>
    <string name="str_photo_detail_right_photo_label">Right</string>
    <string name="str_photo_detail_left_photo_change_button">Change</string>
    <string name="str_photo_detail_right_photo_change_button">Change</string>
    <string name="str_photo_detail_save_button">Save</string>
    <string name="str_folder_list_row_title">Folder Name</string>
    <string name="str_folder_list_row_button_edit">Edit</string>
    <string name="str_folder_list_row_button_delete">Delete</string>
    <string name="str_photo_detail_cancel_button">Cancel</string>
    <string name="str_action_language">Language</string>
    <string name="str_action_language_polish" translatable="false">Polish</string>
    <string name="str_action_language_english" translatable="false">English</string>
    <string name="str_action_language_italian" translatable="false">Italian</string>
    <string name="action_settings">Settings</string>
    <string name="photo_detail_description_zoom_touch_close" translatable="false">zoom touch</string>
    <string name="str_snackbar_mandatory_name">Name is mandatory</string>
    <string name="str_snackbar_mandatory_photos">Photos are mandatory</string>
    <string name="str_snackbar_directory_exists">Directory already exists</string>
    <string name="str_snackbar_unable_save_photos">Unable to save photos</string>
    <string name="str_new_person_input_description">Insert the name of the person you want to store the pictures of the hands</string>
    <string name="str_new_person_name_input">Name</string>
    <string name="str_new_person_save_button">Save</string>
    <string name="str_new_person_cancel_button">Cancel</string>
    <string name="str_photo_detail_add_button">Add</string>
    <string name="str_image_list_row_photo">Image</string>
    <string name="title_activity_camera" translatable="false">Camera Project</string>
    <string name="str_finger_placeholder" translatable="false">Finger placeholder</string>
    <string name="title_activity_hand_photo_preview" translatable="false">Camera Project</string>
    <string name="str_hand_photo_preview" translatable="false">Hand photo preview</string>
    <string name="str_new_photo_background_selection">New photo background and session selection</string>
    <string name="str_new_photo_background_dark">Dark</string>
    <string name="str_new_photo_background_light">Light</string>
    <string name="str_new_photo_background_color">Colored</string>
    <string name="str_new_photo_session_1">Session 1</string>
    <string name="str_new_photo_session_2">Session 2</string>
    <string name="str_new_photo_description_background">Select the actual photo background</string>
    <string name="str_new_photo_description_session">Select the session</string>
    <string name="str_cancel_button">Cancel</string>
    <string name="str_confirm_button">Confirm</string>
    <string name="str_error_message_missing_background">Please select a valid background</string>
    <string name="str_error_message_missing_session">Please select a valid session</string>
</resources>
